Note styling added to Viewing Note paragraph.

--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -95,7 +95,7 @@ W3C reviewers familiar with the <a href="https://www.w3.org/International/articl
 Specialists in the Yaredic Zaima practice who can review the use cases and suggest others.</p> 
 </div>
 <div id="status">
-<p style="text-align: justify;"><span id="status" class="leadin">Viewing Note:</span> 
+<p class="note"><span id="status" class="leadin">Viewing Note:</span> 
 The correct arrangement and styling of Zaima in this document is highly sensistive to browser version and typeface choices.
 This content has been optimized for viewing in the Chrome 60 web browser
 with the <a href="https://software.sil.org/abyssinica/">Abyssinica SIL</a> font used for Ethiopic script samples.
