Fully justified the Viewing Note.

--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -81,6 +81,7 @@ function highlightCode () {
 <style>
   script { display: block; white-space: pre-wrap; }
   .figure-wide { margin-right: 10%; }
+  .justify-full { text-align: justify; }
 </style>
 </head>
 <body>
@@ -95,7 +96,7 @@ W3C reviewers familiar with the <a href="https://www.w3.org/International/articl
 Specialists in the Yaredic Zaima practice who can review the use cases and suggest others.</p> 
 </div>
 <div id="status">
-<p class="note"><span id="status" class="leadin">Viewing Note:</span> 
+<p class="note justify-full"><span id="status" class="leadin">Viewing Note:</span> 
 The correct arrangement and styling of Zaima in this document is highly sensistive to browser version and typeface choices.
 This content has been optimized for viewing in the Chrome 60 web browser
 with the <a href="https://software.sil.org/abyssinica/">Abyssinica SIL</a> font used for Ethiopic script samples.
